# actix-web-pty-xtermjs-websocket

./: Cargo.toml  README.md
src/: main.rs  pty_manager.rs
view/: package.json  pnpm-lock.yaml
view/src/: App.tsx
