[package]
name = "actix-web-pty-xtermjs-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-web = "4"
actix-web-actors = "4.2.0"

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
async-stream = "0.3.5"
